--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "fast-csv": "^1.0.0",
-    "jsonstream": "^1.0.3",
-    "lc-client": "0.0.5",
-    "moment": "^2.12.0",
-    "request": "^2.69.0"
+    "jsonstream": "^1.0.3"
   }
 }
